# llm-obs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
docs/: LAUNCH.md  REPO_SECURITY.md
docs/assets/: README.md  architecture.mmd
docs/integrations/: otlp.md  vercel-ai-sdk.md
examples/: README.md  benchmark_overhead.py  crewai_basic.py  huggingface_basic.py  langchain_basic.py  litellm_basic.py  llamaindex_basic.py  openai_basic.py
llm_obs/: __init__.py  client.py  context.py  discovery.py  guard.py  id.py  logging.py  span.py  streaming.py  transport.py
llm_obs/exporters/: __init__.py  otlp.py
llm_obs/integrations/: __init__.py  llamaindex.py
llm_obs/metrics/: __init__.py  cost.py
llm_obs/pii/: __init__.py  luhn.py  patterns.py  redact.py
llm_obs/providers/: __init__.py  anthropic.py  bedrock.py  gemini.py  huggingface.py  interceptor.py  openai.py
scripts/: push-standalone-repo.sh  sync-to-github.sh
tests/: test_luhn.py  test_otlp_exporter.py  test_redact.py
